tests/fixtures/invalid/round_wrong_type.py
# round() not supported for type Bytes
print(round(b"hello"))
